--- a/package.json
+++ b/package.json
@@ -55,11 +55,11 @@
 		"udev": "0.6.0"
 	},
 	"devDependencies": {
+		"assert-plus": "1.0.0",
 		"@babel/core": "^7.13.16",
 		"@babel/preset-env": "^7.13.15",
 		"@mapbox/node-pre-gyp": "^1.0.4",
 		"@webpack-cli/generators": "^2.0.0",
-		"assert-plus": "1.0.0",
 		"babel-loader": "^8.2.2",
 		"chokidar": "3.5.1",
 		"clean-webpack-plugin": "3.0.0",
@@ -74,9 +74,7 @@
 		"grunt-groc": "0.7.1",
 		"grunt-open": "^0.2.4",
 		"html-webpack-plugin": "^5.3.1",
-		"husky": "^8.0.2",
 		"jest": "^28.1.1",
-		"lint-staged": "^13.1.0",
 		"mime": "3.0.0",
 		"mini-css-extract-plugin": "^1.5.0",
 		"node-gyp": "^8.0.0",
@@ -115,11 +113,7 @@
 		"serve": "npx webpack serve",
 		"test": "npx jest --verbose",
 		"lint": "npx eslint .",
-		"prettier": "npx prettier --write .",
-		"prepare": "husky install"
+		"prettier": "npx prettier --write ."
 	},
-	"lint-staged": {
-		"*.{js,jsx}": "eslint --fix"
-	  },
 	"version": "1.0.0"
 }
