--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
 		"underscore": "1.8.3",
 		"url-loader": "^4.1.1",
 		"uuid": "8.3.2",
-		"wireless-tools": "jlucidar/nodejs-network-tools",
+		"wireless-tools": "0.19.0",
 		"xml2js": "0.4.17"
 	},
 	"optionalDependencies": {
