--- a/package.json
+++ b/package.json
@@ -54,7 +54,6 @@
 	"devDependencies": {
 		"@babel/core": "^7.13.16",
 		"@babel/preset-env": "^7.13.15",
-		"@mapbox/node-pre-gyp": "^1.0.10",
 		"assert-plus": "1.0.0",
 		"babel-loader": "^8.2.2",
 		"chokidar": "3.5.1",
@@ -70,13 +69,10 @@
 		"lint-staged": "^13.1.0",
 		"mime": "3.0.0",
 		"mini-css-extract-plugin": "^1.5.0",
-		"node-gyp": "^8.0.0",
 		"passport-restify": "^1.0.1",
 		"source-map-loader": "^1.0.0",
-		"style-loader": "^0.13.1",
 		"webpack": "5.44.0",
-		"webpack-cli": "^4.6.0",
-		"webpack-dev-server": "4.9.0"
+		"webpack-cli": "^5.0.1"
 	},
 	"engine": "node 16.14.0",
 	"apidoc": {
