--- a/package.json
+++ b/package.json
@@ -23,11 +23,11 @@
 		"eslint-plugin-jest": "^26.2.2",
 		"fs-extra": "0.23.1",
 		"glob": "5.0.15",
-		"got": "11.8.3",
+		"got": "^11.8.6",
 		"jquery": "2.2.4",
 		"jsesc": "1.0.0",
 		"mime-types": "^2.1.30",
-		"minimist": "1.2.5",
+		"minimist": "^1.2.7",
 		"moment": "^2.0.0",
 		"ncp": "2.0.0",
 		"pako": "1.0.4",
@@ -43,7 +43,7 @@
 		"tingodb": "^0.6.1",
 		"tmp": "0.0.31",
 		"toastr": "^2.1.4",
-		"underscore": "1.8.3",
+		"underscore": "^1.13.6",
 		"uuid": "8.3.2",
 		"wireless-tools": "0.19.0",
 		"xml2js": "0.4.17"
