--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "fabmo-engine",
 	"description": "The Engine for running the FabMo platform",
 	"author": "ShopBotTools",
-	"repository": "https://github.com/ShopBotTools/FabMo-Engine.git",
+	"repository": "https://github.com/FabMo/FabMo-Engine.git",
 	"license": "MIT",
 	"main": "dashboard/static/test.js",
 	"config": {
@@ -12,7 +12,6 @@
 		"adm-zip": "0.5.9",
 		"async": "1.4.x",
 		"backbone": "1.4.0",
-		"bonjour": "jlucidar/bonjour",
 		"client-sessions": "0.8.0",
 		"cnctosvg": "1.0.x",
 		"colors": "1.1.x",
@@ -22,22 +21,21 @@
 		"escape-regexp-component": "1.0.2",
 		"eslint": "^8.15.0",
 		"eslint-plugin-jest": "^26.2.2",
-		"file-loader": "^6.2.0",
 		"fs-extra": "0.23.1",
 		"glob": "5.0.15",
-		"got": "11.8.3",
+		"got": "^11.8.6",
 		"jquery": "2.2.4",
 		"jsesc": "1.0.0",
 		"mime-types": "^2.1.30",
-		"minimist": "1.2.5",
+		"minimist": "^1.2.7",
+		"moment": "^2.0.0",
 		"ncp": "2.0.0",
 		"pako": "1.0.4",
-		"passport-local": "jlucidar/passport-restify-local",
-		"path-is-inside": "1.0.1",
+		"passport-local": "FabMo/passport-restify-local",
 		"prettier": "^2.6.2",
 		"process": "0.11.8",
 		"q": "^1.0.1",
-		"restify": "^8.6.1",
+		"restify": "^11.0.0",
 		"serialport": "^9.2.0",
 		"socket.io": "^4.1.1",
 		"socket.io-client": "^4.1.1",
@@ -45,10 +43,9 @@
 		"tingodb": "^0.6.1",
 		"tmp": "0.0.31",
 		"toastr": "^2.1.4",
-		"underscore": "1.8.3",
-		"url-loader": "^4.1.1",
+		"underscore": "^1.13.6",
 		"uuid": "8.3.2",
-		"wireless-tools": "jlucidar/nodejs-network-tools",
+		"wireless-tools": "0.19.0",
 		"xml2js": "0.4.17"
 	},
 	"optionalDependencies": {
@@ -57,8 +54,6 @@
 	"devDependencies": {
 		"@babel/core": "^7.13.16",
 		"@babel/preset-env": "^7.13.15",
-		"@mapbox/node-pre-gyp": "^1.0.4",
-		"@webpack-cli/generators": "^2.0.0",
 		"assert-plus": "1.0.0",
 		"babel-loader": "^8.2.2",
 		"chokidar": "3.5.1",
@@ -68,24 +63,16 @@
 		"eslint-plugin-jquery": "^1.5.1",
 		"eslint-plugin-prettier": "^4.0.0",
 		"grunt": "1.5.3",
-		"grunt-apidoc": "0.11.0",
-		"grunt-available-tasks": "^0.6.3",
-		"grunt-gh-pages": "4.0.0",
-		"grunt-groc": "0.7.1",
-		"grunt-open": "^0.2.4",
 		"html-webpack-plugin": "^5.3.1",
 		"husky": "^8.0.2",
 		"jest": "^28.1.1",
 		"lint-staged": "^13.1.0",
 		"mime": "3.0.0",
 		"mini-css-extract-plugin": "^1.5.0",
-		"node-gyp": "^8.0.0",
 		"passport-restify": "^1.0.1",
 		"source-map-loader": "^1.0.0",
-		"style-loader": "^0.13.1",
 		"webpack": "5.44.0",
-		"webpack-cli": "^4.6.0",
-		"webpack-dev-server": "4.9.0"
+		"webpack-cli": "^5.0.1"
 	},
 	"engine": "node 16.14.0",
 	"apidoc": {
@@ -120,6 +107,6 @@
 	},
 	"lint-staged": {
 		"*.{js,jsx}": "eslint --fix"
-	  },
+	},
 	"version": "1.0.0"
 }
