--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
 		"underscore": "^1.13.6",
 		"uuid": "8.3.2",
 		"wireless-tools": "0.19.0",
-		"xml2js": "0.5.0"
+		"xml2js": "0.5.0",
+		"multer": "^1.4.5-lts.1"
 	},
 	"optionalDependencies": {
 		"udev": "0.6.0"
