--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
 		"mime": "3.0.0",
 		"mini-css-extract-plugin": "^1.6.2",
 		"passport-restify": "^1.0.1",
+		"peggy": "^4.0.3",
 		"source-map-loader": "^1.1.3",
 		"webpack": "5.76.0",
 		"webpack-cli": "^5.1.4"
